--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <h2>Ariel [ALoUnder] Hernandez</h2>
 
         <!-- Short Bio -->
-        
-        <p>No soy superior por ser ingeniero, Solo soy un poco mejor. Soy amante de la tecnología y todo lo que este relacionado, dedico gran parte de mi día a algunos proyectos en Python y JS para <a href="http://www.twitch.tv" target="_blank" rel="noopener">Twitch</a> y <a href="http://www.discord.com" target="_blank" rel="noopener">Discord</a></p>
+        <p>No soy superior por ser ingeniero, Solo soy un poco mejor.</p>
+        <p>Soy amante de la tecnología y todo lo que este relacionado, dedico gran parte de mi día a algunos proyectos en Python y JS para <a href="http://www.twitch.tv" target="_blank" rel="noopener">Twitch</a> y <a href="http://www.discord.com" target="_blank" rel="noopener">Discord</a></p>
         
         <!--
 
