--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- Short Bio -->
         <p>No soy superior por ser ingeniero, Solo soy un poco mejor.</p>
-        <p>Soy amante de la tecnología y todo lo que este relacionado, dedico gran parte de mi día a algunos proyectos en Python y JS para <a href="http://www.twitch.tv" target="_blank" rel="noopener">Twitch</a> y <a href="http://www.discord.com" target="_blank" rel="noopener">Discord</a></p>
+        <p>Soy amante de la tecnología y todo lo que este relacionado. Dedico gran parte de mi día a algunos proyectos en Python y JS para <a href="http://www.twitch.tv" target="_blank" rel="noopener">Twitch</a> y <a href="http://www.discord.com" target="_blank" rel="noopener">Discord</a></p>
         
         <!--
 
@@ -143,7 +143,7 @@
           <br>
 
          <!-- Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener"><img class="icon" src="images/icons/email.svg" alt="Email Icon">hola@arielhernandez.pro</a>
+        <a class="button button-default" href="#" target="_blank" rel="noopener"><img class="icon" src="images/icons/email.svg" alt="Email Icon">info@arielhernandez.pro</a>
         <br> 
 
         <!-- Github -->
