--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
           <br>
 
         <!-- Twitch -->
-        <a class="button button-twitch" href="https://www.twitch.tv/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Mod De Pazcaro ❤</a>
+        <a class="button button-twitch" href="https://www.twitch.tv/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Mod Aca ❤</a>
           <br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="https://www.youtube.com/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">Editor Por Aca</a>
+        <a class="button button-yt" href="https://www.youtube.com/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">Editor Aca ❤</a>
           <br> 
 
          <!-- TikTok -->
