--- a/index.html
+++ b/index.html
@@ -111,14 +111,10 @@
           <br>
 
         <!-- Twitch -->
-        <a class="button button-twitch" href="https://www.twitch.tv/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Mod Aqui ❤</a>
+        <a class="button button-twitch" href="https://www.twitch.tv/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Mod Pazcaro ❤</a>
           <br>
 
-        <!-- YouTube -->
-        <a class="button button-yt" href="https://www.youtube.com/pazcaro" target="_blank" rel="noopener"><img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">Editor Aqui ❤</a>
-          <br> 
-
-         <!-- TikTok -->
+        <!-- TikTok -->
         <a class="button button-tiktok" href="https://www.tiktok.com/@arielhernandezcl" target="_blank" rel="noopener"><img class="icon" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
         <br>
         
