--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Your Image Here -->
         <style>
           img.avatar {
-            border: 4px solid grey;
+            border: 2px solid grey;
             border-radius: 50%;
           }
           a.small {
@@ -100,7 +100,7 @@
         }
         .acuity-embed-button-local:hover,
         .acuity-embed-button-local:hover:before {
-          content: 'Aquí puedes contratar una consultoría conmigo, para consultarme sobre algún proyecto en el que estés trabajando, podés encontrar mas info en el link.';
+          content: '';
           white-space: initial; }
 
         .acuity-embed-button-local:focus {
@@ -115,6 +115,7 @@
         </style>
         <img src="images/avatar.png" srcset="images/avatar@2x.png 2x" class="avatar">
         <!-- Title -->
+        
         <h2>Ariel [ALoUnder] Hernandez</h2>
 
         <!-- Short Bio -->
