--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton-dark.css">
   <link rel="stylesheet" href="css/brands.css">
-
+  <link rel="stylesheet" href="css/profile.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
@@ -48,71 +48,7 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
         <!-- Your Image Here -->
-        <style>
-          img.avatar {
-            border: 2px solid grey;
-            border-radius: 50%;
-          }
-          a.small {
-            background: #1DA1F2;
-            border-radius: 50px;
-            font-size: 18px;
-            text-align: center;
-            text-decoration: none;
-            height: 48px;
-            padding: 0 16px;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 18px;
-            width: 300px;
-            font-weight: 600;
-            line-height: 48px;
-            letter-spacing: 0.5px;
-            background-color: transparent;
-            border-radius: 8px;
-            cursor: pointer;
-            box-sizing: border-box;
-          }
-        .acuity-embed-button-local {
-          background: #3177ca;
-          padding: 8px 12px;
-          border: 0;
-          border-radius: 4px;
-          text-decoration: none;
-          display: inline-block;
-          text-decoration: none;
-          height: 48px;
-          padding: 0 16px;
-          text-align: center;
-          vertical-align: middle;
-          font-size: 18px;
-          width: 300px;
-          font-weight: 600;
-          line-height: 48px;
-          letter-spacing: 0.5px;
-          white-space: nowrap;
-          background-color: transparent;
-          border-radius: 8px;
-          cursor: pointer;
-          box-sizing: border-box;
-          color: #FFFFFF;
-          background-color: #0A66C2
-        }
-        .acuity-embed-button-local:hover,
-        .acuity-embed-button-local:hover:before {
-          content: '';
-          white-space: initial; }
-
-        .acuity-embed-button-local:focus {
-          filter: brightness(90%);
-          color: inherit; }
-          footer {
-            text-align: center;
-            padding: 3px;
-            color: white;
-            font-size: 12px;
-          }
-        </style>
+        
         <img src="images/avatar.png" srcset="images/avatar@2x.png 2x" class="avatar">
         <!-- Title -->
         
