--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           <br>
 
         <!-- LinkedIn -->
-        <a class="button button-linked" href="#" target="_blank" rel="noopener"><img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
+        <a class="button button-linked" href="https://www.linkedin.com/in/arielhernandezcl/" target="_blank" rel="noopener"><img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
           <br>
-
+        <!-- MercadoPago -->
+        <a class="button button-default" href="http://mpago.li/2MaQpL7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/mercadopago.svg" alt="">Mercado Pago</a><br>
+ 
         <br>
-        <br>
-       
           
       </div>
     </div>
