--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
           <br>
         <!-- MercadoPago -->
         <a class="button button-default" href="http://mpago.li/2MaQpL7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/mercadopago.svg" alt="">Mercado Pago</a><br>
- 
-        <br>
+        
+        <!-- Binance -->
+        <a class="button button-snapchat" href="https://www.binance.com/es/activity/referral-entry/CPA?ref=CPA_0077GX8XGI" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/binance.svg" alt="">Binance</a><br>
           
       </div>
     </div>
