--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a class="button button-default" href="http://mpago.li/2MaQpL7" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/mercadopago.svg" alt="">Mercado Pago</a><br>
         
         <!-- Binance -->
-        <a class="button button-snapchat" href="https://www.binance.com/es/activity/referral-entry/CPA?ref=CPA_0077GX8XGI" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/binance.svg" alt="">Binance</a><br>
+        <a class="button button-snapchat" href="https://accounts.binance.com/register?ref=176688920" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/binance.svg" alt="">Binance</a><br>
           
       </div>
     </div>
