--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>You can contact me on different platforms</a></p>
                       
         <!-- X -->
-        <a class="button button-X" href="https://x.com/arielhdezcl" target="_blank" rel="noopener"><img class="icon" src="images/icons/x.svg" alt="Twitter Logo">X</a>
+        <a class="button button-x" href="https://x.com/arielhdezcl" target="_blank" rel="noopener"><img class="icon" src="images/icons/x.svg" alt="Twitter Logo">X</a>
           <br>
 
         <!-- Instagram -->
