--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
       </div>
     </div>
   </div>
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2912c2e4ccc948f5ae4a3098f349ac3f"}'></script><!-- End Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2912c2e4ccc948f5ae4a3098f349ac3f"}'></script>
 </body>
 </html>
