--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         <img src="images/avatar.png" srcset="images/avatar@2x.png 2x" class="avatar">
         <h2>Ariel Hernandez</h2>
         <p>You can contact me on different platforms</a></p>
+
+         <!-- Calendly -->
+        <a class="button button-calendly" href="https://calendly.com/arielhernandezcl/30min" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/calendly.svg" alt="">Schedule with Calendly</a>
+          <br>
+
+        <!-- WhatsApp -->
+        <a class="button button-whatsapp" href="https://api.whatsapp.com/send/?phone=56967215785" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/whatsapp.svg" alt="">WhatsApp</a>
+        <br>
+
+        <!-- Telegram -->
+        <a class="button button-telegram" href="https://t.me/arielhernandez" target="_blank" rel="noopener"><img class="icon" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
+          <br>   
                       
         <!-- X -->
         <a class="button button-x" href="https://x.com/arielhdezcl" target="_blank" rel="noopener"><img class="icon" src="images/icons/x.svg" alt="Twitter Logo">X</a>
@@ -38,11 +50,7 @@
   
         <!-- Twitch -->
         <a class="button button-twitch" href="https://www.twitch.tv/alounder" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Twitch</a>
-          <br>
-
-        <!-- Telegram -->
-        <a class="button button-telegram" href="https://t.me/arielhernandez" target="_blank" rel="noopener"><img class="icon" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
-          <br>           
+          <br>        
                 
         <!-- Github -->
         <a class="button button-github" href="https://github.com/arielhernandezcl" target="_blank" rel="noopener"><img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
